# blogcxx

./: .gitignore  CHANGES  CMakeLists.txt  LICENCE-blogcpp.txt  LICENSE  README.md  README.rst  TODO.txt  build-linux.sh  build-windows.cmd  format-code.sh
CMake/: ConfigureMSVCRuntime.cmake  GENERATE_CXX.cmake
blog/: blog.cfg
blog-default/outdir/: index.html
blog-default/outdir/RSS/: 11.xml  howto.xml
blog-default/outdir/archives/2018/: index.html
blog-default/outdir/author/CreateHowto/: index.html
blog-default/outdir/categories/blogcpp/: index.html
blog-default/outdir/categories/howto/: index.html
blog-default/outdir/posts/howto-use-blogcpp/: index.html
blog-default/outdir/tags/howto/: index.html
blog-default/site/posts/: 2018-12-01 HOWTO.txt
blog-output-master/: blog.cfg
blog-output-master/outdir/RSS/: author-georg.xml  category-blog.xml  category-bsd.xml  series-test.xml  tag-bsd.xml  tag-download.xml
blog-output-master/outdir/archives/2018/: index.htm
blog-output-master/outdir/author/Georg/: index.htm
blog-output-master/outdir/categories/blog/: index.htm
blog-output-master/outdir/categories/bsd/: index.htm
blog-output-master/outdir/series/test/: index.htm
blog-output-master/outdir/tags/bsd/: index.htm
blog-output-master/outdir/tags/download/: index.htm
blog-output-master/outdir/tags/linux/: index.htm
blog-output-master/site/pages/: Poudriere.txt  Test.txt  Test3.txt
blog-output-master/site/posts/: 2018-11-22 Hallo.txt  2018-11-22 TestArticle.txt  2018-11-27 test1.txt  2018-11-27 test2.txt
blog-output-master/templates/default/: post.txt
blog/outdir/: index.html
blog/outdir-from.worked-config-for-study/: index.htm
blog/outdir-from.worked-config-for-study/RSS/: RSS.xml  author-georg.xml  category-blog.xml  category-bsd.xml  tag-bsd.xml  tag-download.xml
blog/outdir-from.worked-config-for-study/archives/2018/: index.htm
blog/outdir-from.worked-config-for-study/author/Georg/: index.htm
blog/outdir-from.worked-config-for-study/categories/blog/: index.htm
blog/outdir-from.worked-config-for-study/categories/bsd/: index.htm
blog/outdir-from.worked-config-for-study/pages/poudriere/: index.htm
blog/outdir-from.worked-config-for-study/pages/test/: index.htm
blog/outdir-from.worked-config-for-study/pages/testpage/: index.htm
blog/outdir/RSS/: 11.xml  12.xml  Georg.xml  bsd.xml  test.xml
blog/site/pages/: Poudriere.txt  Test.txt  Test3.txt  TestPage.txt
blog/site/posts/: 2018-11-22 Hallo.txt  2018-11-27 test1.txt  2018-11-27 test2.txt  2018-12-02 10-Alpha.txt
blog/templates/blerc/: header.txt  post.txt
blog/templates/default/: header.txt
comments/: commento.txt  discourse.txt  disqus.txt  hashover.txt  isso.txt
src/: CMakeLists.txt  CMakeLists.txt.orig  CommentIntegrationClass.h.orig  ContentsGeneratorClass.h.orig  EmojiParserClass.cpp  EmojiParserClass.h  EmojiParserClass.h.orig  ExcerptExtractorClass.cpp  ExcerptExtractorClass.h  ExcerptExtractorClass.h.orig  MarkdownParserClass.cpp  MarkdownParserClass.cpp.orig  MarkdownParserClass.h  MarkdownParserClass.h.orig  MediaEmbedderClass.cpp  MediaEmbedderClass.h  TemplateWrapperClass.cpp  TemplateWrapperClass.h  blogcpp.cpp  blogcpp.cpp.orig  blogcpp.h  blogcpp.h.orig  constants.h  constants.h.orig  helpers.h  helpers.h.orig
src/FilesToMetadata/: CMakeLists.txt  CollectPostData.cpp  CollectPostData.h
src/Log/: Backend.cpp  Backend.h  CMakeLists.txt  Log-Impl.h  Log.cpp  Log.h
src/MetadataToHTML/: CMakeLists.txt  CommentIntegrationClass.cpp  CommentIntegrationClass.h  CreateArchive.cpp  CreateArchive.h  CreateHTML.cpp  CreateHTML.h  CreateIndex.cpp  CreateIndex.h  CreatePage.cpp  CreatePost.cpp  TemplateWrapper.cpp  TemplateWrapper.h
src/MetadataToHTMLAndRSS/: CMakeLists.txt  CreateArchive.cpp  CreateArchive.h  CreateHTMLAndRSS.cpp  CreateHTMLAndRSS.h  CreateIndex.cpp  CreatePage.cpp  CreatePage.h  CreatePost.cpp  CreatePost.h  CreateRSS.cpp  CreateRSS.h  TemplateWrapper.cpp  TemplateWrapper.h
src/MetadataToRSS/: CreateRSS.cpp  CreateRSS.h  RSSGeneratorClass.cpp  RSSGeneratorClass.h
src/MetadataToRSS.1/: CMakeLists.txt  RSSGeneratorClass.cpp
src/Shared/: AsyncWorker.h  CMakeLists.txt  CleanupDirectory.cpp  CleanupDirectory.h  ConfigCollection.cpp  ConfigCollection.h  CopyDirectory.cpp  CopyDirectory.h  Debug.cpp  Debug.h  DebugImpl.h  EmojiParser.cpp  EmojiParser.h  EmojiParserClass.cpp  ExcerptExtractor.cpp  ExcerptExtractor.h  ExcerptExtractorClass.cpp  ExcerptExtractorClass.h  Helpers.cpp  Helpers.h  MarkdownParserClass.cpp  MarkdownParserClass.h  MarkdownReturnClass.h  MarkdownWrapperClass.cpp  MarkdownWrapperClass.h  MediaEmbedderClass.cpp  MediaEmbedderClass.h  Metadata.cpp  Metadata.h  PrintVersion.cpp  PrintVersion.h  SingleItem.h  Slug.cpp  Slug.h  TextParseAll.h  TextParseAllBlogCpp.cpp  TextParseAllCMark.cpp  TextParseAllCMarkGfm.cpp  constants.h  filesystem.h  (+2 more)
src/SharedHTML-RSS/: CMakeLists.txt  CleanupDirectory.cpp  EmojiParserClass.cpp  EmojiParserClass.h  ExcerptExtractorClass.cpp  ExcerptExtractorClass.h  MarkdownParserClass.cpp  MarkdownParserClass.h  MarkdownReturnClass.h  MarkdownWrapperClass.cpp  MarkdownWrapperClass.h  MediaEmbedderClass.cpp  MediaEmbedderClass.h  PluginClass.cpp  PluginClass.h  Slug.cpp  TextParseAll.cpp  TextParseAll.h  TextParseAllCMarkGfm.cpp
src/bin2cxx/: CMakeLists.txt  bin2cxx.cpp
src/blogcpp/: CMakeLists.txt  CmdGenerateMetadata.cpp  CmdGenerateMetadata.h  CmdNewArticle.cpp  CmdNewArticle.h  CmdNewPage.cpp  CmdNewPage.h  ContentsGenerator.cpp  ContentsGenerator.h  blogcpp.cpp
src/blogcxx/: CMakeLists.txt  CmdGenerateMetadata.cpp  CmdGenerateMetadata.h  CmdNewArticle.cpp  CmdNewPage.cpp  ContentsGenerator.cpp  ContentsGenerator.h  blogcxx.cpp
src/html-template++/: CMakeLists.txt  html.cpp  html.h
templates/: RSS.txt
templates/blerc/: footer.txt  header.txt  index.txt  page.txt  post.txt  post.txt.orig  sidebar.txt
templates/default/: archives.txt  footer.txt  header.txt  index.txt  page.txt  post.txt  post.txt.orig  sidebar.txt
templates/default/static/: styles.css
(+27 files in other folders)
